tests/expectations/compiler/group/mult_by_group_fail.out
DCE_ENABLED:
Error [ETYC0372120]: Received types `group` and `group` for the operation `*`.
    --> compiler-test:4:16
     |
   4 |         return 1group * a;
     |                ^^^^^^^^^^
     |
     = Valid operands are two integers of the same type, two fields, or a scalar and a group.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372120]: Received types `group` and `group` for the operation `*`.
    --> compiler-test:4:16
     |
   4 |         return 1group * a;
     |                ^^^^^^^^^^
     |
     = Valid operands are two integers of the same type, two fields, or a scalar and a group.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
